--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       target: dev
       dockerfile: ./connect.Dockerfile
     volumes:
-      - ./bin/.:/node/app
+      - ./src/.:/node/app
       - /node/app/node_modules
     env_file:
       - ./.env/app.env
